--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">DaHongHieu_2122110267</string>
+    <string name="app_name">VanBaLiem_2122110304</string>
 </resources>
